--- a/worksheets/ws_lab10_complete.Rmd
+++ b/worksheets/ws_lab10_complete.Rmd
@@ -1,18 +1,23 @@
-# Inference for comparing two independent means {#lab10}
+---
+title: "Worksheet for Lab 10"
+author: "NAME"
+date: "`r Sys.Date()`"
+output: html_document
+---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_chunk$set(results = 'hold')
-# knitr::opts_chunk$set(class.source = 'Rcode')
-knitr::opts_chunk$set(
-  class.output  = "Rout text-muted",
-  class.message = "Rout text-info",
-  class.warning = "Rout text-warning",
-  class.error   = "Rout text-danger"
-)
+## Introduction
 
-set.seed(12222)
+With this worksheet, you can work on and run the chunks of code you need for different exercises.  Chunks of code appear between the three backquote marks and have a different color, like this:
 
+```{r chunk_name}
+2 + 3
+```
+
+## Preliminaries
+
+Run this chunk first!  This chunk of code loads the packages and datasets you need for this activity.
+
+```{r setup}
 library(tidyverse)
 library(infer)
 
@@ -21,58 +26,42 @@ lullaby_twogroups <- read_csv("https://raw.githubusercontent.com/gregcox7/StatLa
 hiring_study <- read_csv("https://raw.githubusercontent.com/gregcox7/StatLabs/main/data/hiring_study.csv")
 ```
 
-```{r, echo=FALSE, out.width="100%"}
-knitr::include_graphics("img/german_apprentice.jpg")
-```
+Within the braces at the beginning of each chunk, the letter `r` says that the code is written in the "R" language and the text after the little `r` is a helpful label for the chunk.
 
-In this session, we will see how to conduct inferences about whether two groups differ on average.  In these situations, we have two separate and independent samples from two (potentially) different populations.  We want to know if the observed differences in sample means reflect a difference in the means of the two populations or if they could reasonably be attributed to chance alone.  Just like when we were doing inferences about differences in proportions, we can use both simulation and mathematical methods to address these types of questions.
+To run a chunk of code, press the green arrow button in the upper right of the chunk.  The result of running the chunk will appear immediately below it.  You can run a chunk more than once.  If you need to change anything or get an error, you can always edit your chunk and try again.
 
-To help with the later exercises in this session, be sure to **download the worksheet for this session** by right-clicking on the following link and selecting "Save link as...": [Worksheet for Lab 10](https://raw.githubusercontent.com/gregcox7/StatLabs/main/worksheets/ws_lab10.Rmd).  Open the saved file (which by default is called "ws_lab10.Rmd") in RStudio.
-
-## What if there were two groups of infants?
-
-In our previous lab, we analyzed data from an experiment in which infants listened to two singers and then researchers recorded how much time each infant spent looking at the person who sang a familiar song, relative to someone who sang a new song.  The data from the previous lab were *paired*.  For each infant, we could compare the amount of time looking at the familiar singer *before* they sang vs. *after* they sang.  To do this, we created a new variable called `diff` that was the difference between the "Before" and "After" looking times.
-
-In this first part of our activity, we are going to see how our conclusions would be affected if we had instead compared *two independent groups* of infants, one who didn't hear anyone sing (the "Before" group) and another who did hear the two people sing (the "After" group).  We will again look at the difference in mean looking times, only now we won't be looking at that difference *within* each infant.  We will be looking at the difference *between* each *group* of infants.
-
-### Paired vs. two-group data
-
-::: {.exercise}
+## Exercise 10.1
 
 Run the following chunk of code to examine the first few rows of the *original* infant data from last time:
 
-```{r eval = FALSE}
+```{r}
 head(lullaby_paired)
 ```
 
 Now look at the first few rows of the data in which we *pretend* that the infants were two different groups:
 
-```{r eval = FALSE}
+```{r}
 head(lullaby_twogroups)
 ```
 
 In your own words, describe the differences in how the data are structured between the original paired data and our pretend version with two groups.  *Hint:* Would we be able to easily create a new `diff` variable with the two-group data like we did with the original paired data?
 
-:::
-
-### Comparing inferences
-
-::: {.exercise}
+## Exercise 10.2
 
 Last time, we tested the null hypothesis that the difference in mean looking times was zero.  Another way to state that null hypothesis is that looking time and hearing people sing are *independent*.  Now we will use our pretend two-group data to test the same null hypothesis and see whether our conclusions would be different.
 
 Fill in the blanks in the following chunk of code to use *random permutation* to simulated 1000 datasets assuming the null hypothesis is true.  At the end of the chunk, we visualize the sampling distribution of the *difference in means* between groups across each of those simulations, along with a red line indicating where the observed difference falls.  For guidance, check out how we did this with Kobe's data in Lab 5; the only important difference is the `stat` in the `calculate` line (remember that we are looking at differences in means, not proportions).  Also, remember that with the pretend two-group data we have both a response variable (`Looking`) and an explanatory variable (`Group`).
 
-```{r eval = FALSE}
+```{r}
 lullaby_twogroups_obs_diff <- lullaby_twogroups %>%
-    specify(___ ~ ___) %>%
-    calculate(stat = "___", order = c("After", "Before"))
+    specify(Looking ~ Group) %>%
+    calculate(stat = "diff in means", order = c("After", "Before"))
 
 lullaby_twogroups_null_dist <- lullaby_twogroups %>%
-    specify(___ ~ ___) %>%
-    hypothesize(null = "___") %>%
-    generate(reps = 1000, type = "___") %>%
-    calculate(stat = "___", order = c("After", "Before"))
+    specify(Looking ~ Group) %>%
+    hypothesize(null = "independence") %>%
+    generate(reps = 1000, type = "permute") %>%
+    calculate(stat = "diff in means", order = c("After", "Before"))
 
 lullaby_twogroups_null_dist %>%
     visualize() +
@@ -82,7 +71,7 @@ lullaby_twogroups_null_dist %>%
 a. Based on the visualization you just made, what would you conclude?  Would you reject the null hypothesis or not and why?
 b. Run the following chunk of code to perform the same test using the original paired data (last time, we did this with a mathematical model instead of simulation, but the outcome is the same).  Would you come to the same conclusion with the original paired data as with our pretend two-group data?
 
-```{r eval = FALSE}
+```{r}
 lullaby_paired_obs_diff <- lullaby_paired %>%
     mutate(diff = After - Before) %>%
     specify(response = diff) %>%
@@ -103,41 +92,15 @@ lullaby_paired_null_dist %>%
 c. Why do you think the observed difference of means (the red line) is in the same position on the X axis in both graphs?
 d. Why do you think the sampling distribution is wider in part [a] (with the pretend two-group data) than part [b] (with the original paired data)?
 
-:::
-
-## Are recruiters more impressed by a spoken vs. written hiring pitch?
-
-Imagine trying to convince a recruiter that you are the right person for the job.  Do you come off better in writing or if you can give your pitch in person?  This was the question addressed in a series of experiments by @SchroederEpley2015.  We will focus on one of their experiments (Experiment 4 in the original paper).
-
-In this experiment, MBA students at the University of Chicago business school prepared short "elevator pitches" describing why they should be hired at a firm of their choice.  The students then recorded themselves giving their pitch.  Finally, a sample of professional recruiters was selected and randomly assigned to one of two groups:  One group would hear the audio recording of the student's pitch; another group would read a transcript of that audio recording.  The recruiters evaluated the potential applicants on a number of scales, but we will focus only on one response variable:  On a scale from 1--10, recruiters rated the likelihood that they would hire student based on their (spoken or written) pitch.
-
-The **research question** we will address with these data is, "is there a difference in average hiring ratings when a recruiter hears or reads a pitch?"
-
-::: {.exercise}
-
-What are the **null** and **alternative** hypotheses corresponding to our research question?
-
-:::
-
-### Check out the data
-
-First, let's check out the first few rows of the data:
-
-```{r echo = FALSE}
-knitr::kable(head(hiring_study))
-```
-
-Each row represents the responses from a particular recruiter.  Whether the recruiter got a spoken or written pitch is recorded in the `Condition` variable, which is either "audio" (for hearing a spoken pitch) or "transcript" (for reading a transcript of the pitch).  The recruiter's hiring rating is recorded in the `hire` variable, which is a number between 1 and 10.
-
-::: {.exercise}
+## Exercise 10.4
 
 Fill in the blanks in the code below with the appropriate variable names to visualize the distribution of ratings in the two groups.  *Hint:* Keep in mind what are the names of the explanatory variable and response variable.
 
 ```{r eval=FALSE}
 hiring_study %>%
-    ggplot(aes(x = ___)) +
+    ggplot(aes(x = hire)) +
     geom_histogram(binwidth = 1) +
-    facet_wrap("___", ncol = 1)
+    facet_wrap("Condition", ncol = 1)
 ```
 
 a. Describe the shape of the distributions and whether it seems like there may be a relationship between the type of pitch and hiring ratings.
@@ -145,26 +108,24 @@ b. Fill in the blanks in the code below to use random permutation to simulate *o
 
 ```{r eval=FALSE}
 hiring_null_simulation <- hiring_study %>%
-    specify(___ ~ ___) %>%
-    hypothesize(null = "___") %>%
-    generate(reps = 1, type = "___")
+    specify(hire ~ Condition) %>%
+    hypothesize(null = "independence") %>%
+    generate(reps = 1, type = "permute")
 
 hiring_null_simulation %>%
-    ggplot(aes(x = ___)) +
+    ggplot(aes(x = hire)) +
     geom_histogram(binwidth = 1) +
-    facet_wrap("___", ncol=1)
+    facet_wrap("Condition", ncol = 1)
 ```
 
-:::
-
-::: {.exercise}
+## Exercise 10.5
 
 Fill in the blanks in the code below using the appropriate variable names to obtain numerical summaries of each group's hiring ratings.
 
-```{r eval = FALSE}
+```{r}
 hiring_study %>%
-    group_by(___) %>%
-    summarize(sample_mean = mean(___), sample_sd = sd(___), sample_size = n())
+    group_by(Condition) %>%
+    summarize(sample_mean = mean(hire), sample_sd = sd(hire), sample_size = n())
 ```
 
 Use the resulting table to answer the following questions.
@@ -172,47 +133,35 @@ Use the resulting table to answer the following questions.
 a. Do the two groups have similar variability?  (Be sure to refer to the "rule of thumb" for checking whether two samples have similar variability.)
 b. Do the sample means suggest an advantage for either spoken ("audio") or written ("transcript") hiring pitches?
 
-:::
-
-### Hypothesis testing via simulation
-
-As we've seen, we can use random permutation to model how the data would look if the null hypothesis were true.  For each of these simulated datasets, we compute the difference in mean hiring ratings between the audio and transcript conditions.  By doing this many times, we build up a sampling distribution of the difference in means.  If very few simulated datasets produce a difference at least as extreme as what we actually observed, we can reject the null hypothesis.
-
-::: {.exercise}
+## Exercise 10.6
 
 Fill in the blanks in the code below (using the appropriate variable names) to find the observed difference in mean hiring ratings between conditions, then compare this against the differences we would expect *if* the null hypothesis were true.  We will build the sampling distribution of differences in means using random permutation.  Be sure to make at least 1000 simulations.  For the final blank, the `direction` can be either `less`, `greater`, or `two-sided`; pick the one corresponding to the alternative hypothesis.
 
 ```{r eval=FALSE}
 hiring_obs_diff <- hiring_study %>%
-    specify(___ ~ ___) %>%
-    calculate(stat = "___", order = c("audio", "transcript"))
+    specify(hire ~ Condition) %>%
+    calculate(stat = "diff in means", order = c("audio", "transcript"))
 
 hiring_null_simulation <- hiring_study %>%
-    specify(___ ~ ___) %>%
-    hypothesize(null = "___") %>%
-    generate(reps = ___, type = "___") %>%
-    calculate(stat = "___", order = c("audio", "transcript"))
+    specify(hire ~ Condition) %>%
+    hypothesize(null = "independence") %>%
+    generate(reps = 1000, type = "permute") %>%
+    calculate(stat = "diff in means", order = c("audio", "transcript"))
 
 hiring_null_simulation %>%
     visualize() +
-    shade_p_value(obs_stat = hiring_obs_diff, direction = "___")
+    shade_p_value(obs_stat = hiring_obs_diff, direction = "two-sided")
 ```
 
 Based on the visualization, does it seems like the observed difference would be unusual if the null hypothesis were true?
 
-:::
-
-### Hypothesis testing using the T distribution
-
-In this section, we will relate the simulation approach we just used to the mathematical model approach using the T distribution.
-
-::: {.exercise}
+## Exercise 10.7
 
 Fill in the blanks in the code below (using the appropriate variable names) to calculate the **T score** associated with our sample:
 
 ```{r eval=FALSE}
 hiring_obs_t <- hiring_study %>%
-    specify(___ ~ ___) %>%
+    specify(hire ~ Condition) %>%
     calculate(stat = "t", order = c("audio", "transcript"))
 
 hiring_obs_t
@@ -221,36 +170,28 @@ hiring_obs_t
 a. Does the T score indicate that the observed difference is relatively near or far from what we would expect if the null hypothesis were true?  Explain your reasoning.
 b. Above, we used code with the line `calculate(stat = "diff in means", order = c("audio", "transcript"))` to get the observed difference in sample means.  How does that line differ from the `calculate` line in the code you used in this Exercise to find the T score?  Describe in your own words what the `stat` option seems to do.
 
-:::
-
-::: {.exercise}
+## Exercise 10.8
 
 Fill in the blanks in the code below to visualize where our sample falls on the corresponding T distribution.  As above, be sure to fill in the last blank according to the alternative hypothesis (either `two-sided`, `less`, or `greater`).
 
-```{r eval = FALSE}
+```{r}
 hiring_null_math <- hiring_study %>%
-    specify(___ ~ ___) %>%
+    specify(hire ~ Condition) %>%
     assume("t")
 
 hiring_null_math %>%
     visualize() +
-    shade_p_value(obs_stat = hiring_obs_t, direction = "___")
+    shade_p_value(obs_stat = hiring_obs_t, direction = "two-sided")
 ```
 
 a. Compare the visualization you just made using the mathematical model with the visualization you made earlier using simulation.  Relative to each null distribution, is our observed data (the red vertical line) in a similar place?  Is a similar proportion of the null distribution more extreme than what was observed?
 
 b. Fill in the blanks in the code below to get the $p$ value according to the mathematical model (again, the `direction` should correspond to the alternative hypothesis).  Would you reject the null hypothesis or not and why?  (Be sure to state your significance level!)
 
-```{r eval = FALSE}
+```{r}
 hiring_null_math %>%
-    get_p_value(obs_stat = hiring_obs_t, direction = "___")
+    get_p_value(obs_stat = hiring_obs_t, direction = "two-sided")
 ```
 
 c. Based on this hypothesis test (either the simulation or mathematical approach will do), give a one sentence summary of what we should conclude about the effectiveness of spoken vs. written pitches on hiring ratings.
 d. Speculate about why these results turned out the way they did.  Do you expect this result would generalize to hiring decisions in real life?  Why or why not?
-
-:::
-
-## Wrap-up
-
-In this session, we got some practice doing hypothesis tests to compare means between two independent groups.  We carried out the test using both simulation and mathematical models.  Along the way, we saw whether there was evidence that spoken or written job pitches are more likely to lead to hiring ratings, illustrating how these methods are used and applied in research settings.
